# Programacion_Imperativa_Lenguaje_C

PI/: 10peso.c  10peso.out  CMakeLists.txt  HelloWorld.c  HelloWorld.out  ok.sh  tempCodeRunnerFile.c
PI/Clase Arrays/: Ej1.c  Ej4mejorado.c
PI/Clase punteros/: ApareceP.c  ApareceP.out  Horas.c  Horas.out
PI/Clase str/: str.c  str.out
PI/Clases Franco/Clase Arrays/: Ej2.c  Ej3.c  Ej4.c
PI/Clases Franco/Clase Preparcial/: Ej3.c
PI/Clases Franco/Clase Scanf/: scanf  scanf.c
PI/Clases Franco/Clase punteros/: ApareceV.c  Swap.c  Swap.out
PI/Clases Franco/Clase stdlib/: 1.c  1.out
PI/Clases Franco/Ej Macros Clase 07 de preprocesador/: Macro MAYOR guarda en r.c
PI/Clases Franco/Listas/: Ej1.c
PI/Clases Franco/Recursividad/: Ej2.c  Ej3.c  Ej4.c  Ej5.c  Ej6.c  Ej6.out  Ej7.c  Ej7.out  Ej8.c
PI/Clases Franco/puntero a fun/: Ej1.c
PI/Ej Macros Clase 07 de preprocesador/: Macro MAYOR.c
PI/Guia 1/: Ej1.c  Ej4.out
PI/Guia 2/: Ej11.c  Ej12.out  Ej13.out  Ej14.out  Ej15.c  Ej15.out  Ej16.c  Ej18.c  Ej20_2.c  Ej20_7.c  Ej20_7.out  Ej6.out  Ej7.c  Ej7.out  Ej8.c  Ej9.out
PI/Guia 3/: Ej13A.c  Ej13B.out  Ej16.c  Ej18.out  Ej19B.c  Ej2.out  Ej20.c  Ej20.out  Ej21.out  Ej22.c  Ej22.out  Ej25.c  Ej3.c  Ej4A.c  Ej4C.c  Ej5.c  Ej5.out  Ej9.out
PI/Guia 4/: Ej13.out  Ej15.out  Ej1c.out  Ej4.c  Ej6.c  Ej7.c  Ej7.out  tp4_14a.c  tp4_15a.h  tp4_15b.h  tp4_15main.c
PI/Guia 5/: Ej11.c  Ej12.c  Ej12.out  Ej1a.c  Ej1b.out  Ej1c.c  Ej1d.out  Ej1e.out  Ej3abc.out  Ej3dc.c  Ej5.c  Ej6.out  Ej8.c  Ej8.out  Ej9.out
PI/Guia 6/: Ej10.c  Ej12.c  Ej12.out  Ej13.out  Ej15.c  Ej15.out  Ej16.c  Ej16.out  Ej17.c  Ej18.c  Ej18.out  Ej5.c  Ej5.out  Ej6.c  Ej6.out  Ej7.c  Ej9.c  Ej9.out
PI/Guia 6/Tests/: Ej11.c  Ej12.c  Ej13.c  Ej15.c  Ej16.c  Ej17.c  Ej5.c  Ej7.c  Ej9.c
PI/Guias/Guia 1/: Ej3.c  Ej3.out  Ej4.c  Ej5.c  Ej5.out  a.out  out.txt  tp1_15_6.c
PI/Guias/Guia 10/: Ej1.c  Ej1.out  Ej2.c  Ej3.c  Ej3.out  Ej4.c  Ej4.out  Ej5.c  Ej5.out  Ej6.c  Ej6.out  Ej7.c  Ej7.out  Ej8.c  Ej8.out  Ej9.c
PI/Guias/Guia 11/: Ej1.c  Ej1.out  Ej10.c  Ej10.out  Ej10T.c  Ej11.c  Ej11.h  Ej11.out  Ej11T.c  Ej12.c  Ej12.h  Ej12.out  Ej12T.c  Ej13.c  Ej13.h  Ej13.out  Ej13T.c  Ej14.c  Ej14.out  Ej14T.c  Ej15.c  Ej15.h  Ej15.out  Ej15T.c  Ej16.c  Ej17.c  Ej17.h  Ej17T.c  Ej5.c  Ej5.h  Ej5.out  Ej5T.c  Ej8.c  Ej8.h  Ej8T.c
PI/Guias/Guia 2/: Ej10.c  Ej10.out  Ej11.out  Ej12.c  Ej13.c  Ej14.c  Ej16.out  Ej17.c  Ej18.out  Ej20_1.c  Ej20_6.c  Ej20_6.out  Ej5.c  Ej5.out  Ej8.out  Ej9.c  tp2_21.c
PI/Guias/Guia 3/: Ej1.c  Ej1.out  Ej13.out  Ej13A.out  Ej13B.c  Ej13B2.c  Ej13B2.out  Ej14.c  Ej14.out  Ej15.c  Ej15.out  Ej16.out  Ej17.c  Ej17.out  Ej18.c  Ej19A.c  Ej19A.out  Ej2.c  Ej21.c  Ej23.c  Ej25.out  Ej3.out  Ej4B.c  Ej9.c  eliminador de espacios.out
PI/Guias/Guia 4/: Ej10.c  Ej11.c  Ej12A2.c  Ej16.c  Ej17.c  Ej17.out  Ej1a.c  Ej1a.out  Ej1b.c  Ej1c.c  Ej3.c  Ej5.c  Ej6.out  Ej9.c  Ej9.out  tp4_13a.c  tp4_13b.h  tp4_15a.c  tp4_15b.c
PI/Guias/Guia 5/: Ej10.out  Ej1a.out  Ej1c.out  Ej1d.c  Ej1e.c  Ej3abc.c  Ej3dc.out  Ej5.out  Ej6.c  Ej7.c  Ej7.out  Ej9.c
PI/Guias/Guia 6/: Ej10.out  Ej11.c  Ej11.out  Ej13.c  Ej14.c  Ej14.out  Ej16.c  Ej17.out  Ej18.c  Ej18.out  Ej2.c  Ej2.out  Ej20.c  Ej20.out  Ej21.c  Ej22.c  Ej22.out  Ej23.c  Ej23.out  Ej24.c  Ej24.out  Ej25.c  Ej25.out  Ej26.c  Ej26.out  Ej27.c  Ej27.out  Ej28.c  Ej28.out  Ej3.c  Ej3.out  Ej4.c  Ej4.out  Ej7.out  Ej8.c  Ej8.out
PI/Guias/Guia 6/Tests/: Ej20.c  Ej22.c  Ej23.c  Ej24.c  Ej26.c  Ej27.c  Ej28.c  Ej8.c
PI/Guias/Guia 7/: Ej1.c  Ej1.out  Ej10.c  Ej10.out  Ej19.c  Ej2.c  Ej2.out  Ej20y21.c  Ej5.c  Ej5.out  Ej6.c  Ej6.out  Ej7.c  Ej7.out  Ej8.c  Ej8.out  Ej9.c
PI/Guias/Guia 8/: Ej4.c  Ej4.out  Ej5.c  Ej5.out  Ej7.c
PI/Guias/Guia 9/: Ej1.c  Ej10.c  Ej11.c  Ej12.c  Ej13.c  Ej14.c  Ej15.c  Ej16.c  Ej17.c  Ej17.out  Ej18.c  Ej18.out  Ej8.c  Ej9.c  Ej9.out  EjA.c  EjA.out  EjB.c  EjB.out
PI/Librerias/: printArray.c  printArray.h  utillist.c  utillist.h
PI/Taller 1.9.23/: 1.c  3.out
PI/Taller 15.9.23/: Ej1.c  Ej2.c
PI/Taller 2/: EJ1.c  EJ2.out
PI/Taller 25.8.23/: EjRandom.c  numAmigos.c  numAmigos.out
PI/Taller 8.9.23/: Ej1.c  Ej3.c  Ej3.out
PI/Talleres/Taller 1.9.23/: 2.c  3.c  4.c  4.out  5.c  5.out
PI/Talleres/Taller 1.9.23/Tests/: 4t.c
PI/Talleres/Taller 10/: Ej1.c  Ej1.out  Ej2.c  Ej2.out  Ej3.c  Ej3.out
PI/Talleres/Taller 11/: Ej1.c  Ej1.out  Ej2.c  Ej2.out  Ej3.c  Ej3.out  Ej4.c  Ej4.out
PI/Talleres/Taller 15.9.23/: Ej1.out  Ej2.out  Ej3.c
PI/Talleres/Taller 2/: EJ1.out  EJ2.c  EJ3.c  EJ3.out
PI/Talleres/Taller 25.8.23/: EjRandom.out  PrimoN.c  PrimoN.out
PI/Talleres/Taller 6.10.23/: Ej2.c  Ej3.c
PI/Talleres/Taller 8.9.23/: Ej2.c  Ej2.out  EjChiche.out  ejChiche.c
PI/Talleres/Taller 9/: Ej1.c  Ej1.out  Ej2.c
PI/Talleres/Taller 9/assert/: A1.c  A2.c
PI/Talleres/Taller Pre primer parcial/: EJ4.c  Ej2.c  Ej2.out  Ej3.c  Ej4.out
PI/Talleres/Taller Pre primer parcial/Test/: Ej2.c
PI/Talleres/TallerADT/: 1.out  diccioADT.h  diccioCDT.c  queueADT.h  queueCDT.c
