cmake_minimum_required(VERSION 3.26)
project(PI C)

set(CMAKE_C_STANDARD 11)

include_directories("Guias/Guia 1")
include_directories("Guias/Guia 4")
include_directories(Librerias)
include_directories(Librerias/random)

add_executable(PI
        "Clases Franco/Clase Arrays/Ej1.c"
        "Clases Franco/Clase Arrays/Ej2.c"
        "Clases Franco/Clase Arrays/Ej3.c"
        "Clases Franco/Clase Arrays/Ej4.c"
        "Clases Franco/Clase Arrays/Ej4mejorado.c"
        "Clases Franco/Clase Preparcial/Ej3.c"
        "Clases Franco/Clase punteros/ApareceP.c"
        "Clases Franco/Clase punteros/ApareceV.c"
        "Clases Franco/Clase punteros/Horas.c"
        "Clases Franco/Clase punteros/Swap.c"
        "Clases Franco/Clase Scanf/scanf.c"
        "Clases Franco/Clase stdlib/1.c"
        "Clases Franco/Clase str/str.c"
        "Clases Franco/Ej Macros Clase 07 de preprocesador/Macro MAYOR guarda en r.c"
        "Clases Franco/Ej Macros Clase 07 de preprocesador/Macro MAYOR.c"
        "Guias/Guia 1/Ej1.c"
        "Guias/Guia 1/Ej2.c"
        "Guias/Guia 1/Ej3.c"
        "Guias/Guia 1/Ej4.c"
        "Guias/Guia 1/Ej5.c"
        "Guias/Guia 1/tp1_06.c"
        "Guias/Guia 1/tp1_07.c"
        "Guias/Guia 1/tp1_08.c"
        "Guias/Guia 1/tp1_09a.c"
        "Guias/Guia 1/tp1_09b.c"
        "Guias/Guia 1/tp1_10.c"
        "Guias/Guia 1/tp1_11.c"
        "Guias/Guia 1/tp1_12.c"
        "Guias/Guia 1/tp1_12.h"
        "Guias/Guia 1/tp1_13.c"
        "Guias/Guia 1/tp1_13b.c"
        "Guias/Guia 1/tp1_14.c"
        "Guias/Guia 1/tp1_14b.c"
        "Guias/Guia 1/tp1_15_6.c"
        "Guias/Guia 2/Ej10.c"
        "Guias/Guia 2/Ej11.c"
        "Guias/Guia 2/Ej12.c"
        "Guias/Guia 2/Ej13.c"
        "Guias/Guia 2/Ej14.c"
        "Guias/Guia 2/Ej15.c"
        "Guias/Guia 2/Ej16.c"
        "Guias/Guia 2/Ej17.c"
        "Guias/Guia 2/Ej18.c"
        "Guias/Guia 2/Ej20_1.c"
        "Guias/Guia 2/Ej20_2.c"
        "Guias/Guia 2/Ej20_6.c"
        "Guias/Guia 2/Ej20_7.c"
        "Guias/Guia 2/Ej5.c"
        "Guias/Guia 2/Ej6.c"
        "Guias/Guia 2/Ej7.c"
        "Guias/Guia 2/Ej8.c"
        "Guias/Guia 2/Ej9.c"
        "Guias/Guia 2/tp2_21.c"
        "Guias/Guia 3/Ej1.c"
        "Guias/Guia 3/Ej13A.c"
        "Guias/Guia 3/Ej13B.c"
        "Guias/Guia 3/Ej13B2.c"
        "Guias/Guia 3/Ej14.c"
        "Guias/Guia 3/Ej15.c"
        "Guias/Guia 3/Ej16.c"
        "Guias/Guia 3/Ej17.c"
        "Guias/Guia 3/Ej18.c"
        "Guias/Guia 3/Ej19A.c"
        "Guias/Guia 3/Ej19B.c"
        "Guias/Guia 3/Ej2.c"
        "Guias/Guia 3/Ej20.c"
        "Guias/Guia 3/Ej21.c"
        "Guias/Guia 3/Ej22.c"
        "Guias/Guia 3/Ej23.c"
        "Guias/Guia 3/Ej25.c"
        "Guias/Guia 3/Ej3.c"
        "Guias/Guia 3/Ej4A.c"
        "Guias/Guia 3/Ej4B.c"
        "Guias/Guia 3/Ej4C.c"
        "Guias/Guia 3/Ej5.c"
        "Guias/Guia 3/Ej9.c"
        "Guias/Guia 4/Ej10.c"
        "Guias/Guia 4/Ej11.c"
        "Guias/Guia 4/Ej12A1.c"
        "Guias/Guia 4/Ej12A2.c"
        "Guias/Guia 4/Ej12b1.c"
        "Guias/Guia 4/Ej12b2.c"
        "Guias/Guia 4/Ej16.c"
        "Guias/Guia 4/Ej17.c"
        "Guias/Guia 4/Ej1a.c"
        "Guias/Guia 4/Ej1b.c"
        "Guias/Guia 4/Ej1c.c"
        "Guias/Guia 4/Ej3.c"
        "Guias/Guia 4/Ej4.c"
        "Guias/Guia 4/Ej5.c"
        "Guias/Guia 4/Ej6.c"
        "Guias/Guia 4/Ej7.c"
        "Guias/Guia 4/Ej9.c"
        "Guias/Guia 4/tp4_13a.c"
        "Guias/Guia 4/tp4_13b.h"
        "Guias/Guia 4/tp4_14a.c"
        "Guias/Guia 4/tp4_14b.c"
        "Guias/Guia 4/tp4_15a.c"
        "Guias/Guia 4/tp4_15a.h"
        "Guias/Guia 4/tp4_15b.c"
        "Guias/Guia 4/tp4_15b.h"
        "Guias/Guia 4/tp4_15main.c"
        "Guias/Guia 5/Ej10.c"
        "Guias/Guia 5/Ej11.c"
        "Guias/Guia 5/Ej12.c"
        "Guias/Guia 5/Ej13.c"
        "Guias/Guia 5/Ej1a.c"
        "Guias/Guia 5/Ej1b.c"
        "Guias/Guia 5/Ej1c.c"
        "Guias/Guia 5/Ej1d.c"
        "Guias/Guia 5/Ej1e.c"
        "Guias/Guia 5/Ej3abc.c"
        "Guias/Guia 5/Ej3dc.c"
        "Guias/Guia 5/Ej5.c"
        "Guias/Guia 5/Ej6.c"
        "Guias/Guia 5/Ej7.c"
        "Guias/Guia 5/Ej8.c"
        "Guias/Guia 5/Ej9.c"
        "Guias/Guia 6/Tests/Ej10.c"
        "Guias/Guia 6/Tests/Ej11.c"
        "Guias/Guia 6/Tests/Ej12.c"
        "Guias/Guia 6/Tests/Ej13.c"
        "Guias/Guia 6/Tests/Ej14.c"
        "Guias/Guia 6/Tests/Ej15.c"
        "Guias/Guia 6/Tests/Ej16.c"
        "Guias/Guia 6/Tests/Ej17.c"
        "Guias/Guia 6/Tests/Ej18.c"
        "Guias/Guia 6/Tests/Ej20.c"
        "Guias/Guia 6/Tests/Ej22.c"
        "Guias/Guia 6/Tests/Ej23.c"
        "Guias/Guia 6/Tests/Ej24.c"
        "Guias/Guia 6/Tests/Ej25.c"
        "Guias/Guia 6/Tests/Ej26.c"
        "Guias/Guia 6/Tests/Ej27.c"
        "Guias/Guia 6/Tests/Ej28.c"
        "Guias/Guia 6/Tests/Ej3.c"
        "Guias/Guia 6/Tests/Ej4.c"
        "Guias/Guia 6/Tests/Ej5.c"
        "Guias/Guia 6/Tests/Ej7.c"
        "Guias/Guia 6/Tests/Ej8.c"
        "Guias/Guia 6/Tests/Ej9.c"
        "Guias/Guia 6/Ej10.c"
        "Guias/Guia 6/Ej11.c"
        "Guias/Guia 6/Ej12.c"
        "Guias/Guia 6/Ej13.c"
        "Guias/Guia 6/Ej14.c"
        "Guias/Guia 6/Ej15.c"
        "Guias/Guia 6/Ej16.c"
        "Guias/Guia 6/Ej17.c"
        "Guias/Guia 6/Ej18.c"
        "Guias/Guia 6/Ej2.c"
        "Guias/Guia 6/Ej20.c"
        "Guias/Guia 6/Ej21.c"
        "Guias/Guia 6/Ej22.c"
        "Guias/Guia 6/Ej23.c"
        "Guias/Guia 6/Ej24.c"
        "Guias/Guia 6/Ej25.c"
        "Guias/Guia 6/Ej26.c"
        "Guias/Guia 6/Ej27.c"
        "Guias/Guia 6/Ej28.c"
        "Guias/Guia 6/Ej3.c"
        "Guias/Guia 6/Ej4.c"
        "Guias/Guia 6/Ej5.c"
        "Guias/Guia 6/Ej6.c"
        "Guias/Guia 6/Ej7.c"
        "Guias/Guia 6/Ej8.c"
        "Guias/Guia 6/Ej9.c"
        "Guias/Guia 7/Ej1.c"
        Librerias/random/main.c
        Librerias/random/random.c
        Librerias/random/random.h
        Librerias/getnum.c
        Librerias/getnum.h
        Librerias/getnum2.c
        Librerias/printArray.c
        Librerias/printArray.h
        Librerias/random.c
        Librerias/random.h
        "Talleres/Taller 1.9.23/Tests/3t.c"
        "Talleres/Taller 1.9.23/Tests/4t.c"
        "Talleres/Taller 1.9.23/1.c"
        "Talleres/Taller 1.9.23/2.c"
        "Talleres/Taller 1.9.23/3.c"
        "Talleres/Taller 1.9.23/4.c"
        "Talleres/Taller 1.9.23/5.c"
        "Talleres/Taller 15.9.23/Ej1.c"
        "Talleres/Taller 15.9.23/Ej2.c"
        "Talleres/Taller 15.9.23/Ej3.c"
        "Talleres/Taller 2/EJ1.c"
        "Talleres/Taller 2/EJ2.c"
        "Talleres/Taller 2/EJ3.c"
        "Talleres/Taller 25.8.23/EjRandom.c"
        "Talleres/Taller 25.8.23/numAmigos.c"
        "Talleres/Taller 25.8.23/PrimoN.c"
        "Talleres/Taller 6.10.23/Ej2.c"
        "Talleres/Taller 8.9.23/Ej1.c"
        "Talleres/Taller 8.9.23/Ej2.c"
        "Talleres/Taller 8.9.23/Ej3.c"
        "Talleres/Taller 8.9.23/ejChiche.c"
        "Talleres/Taller Pre primer parcial/Test/Ej2.c"
        "Talleres/Taller Pre primer parcial/Ej2.c"
        "Talleres/Taller Pre primer parcial/Ej3.c"
        "Talleres/Taller Pre primer parcial/EJ4.c"
        10peso.c
        HelloWorld.c
        tempCodeRunnerFile.c)
